Revise heuristic for memory usage of build process.
Use fixed percentage (85% of system memory) in containers and CI environments (`$CI` environment variable set to `true`).
Otherwise, try to use available memory to reduce memory pressure on the host machine.
If less than 8GB of memory is available, use 85% of system memory.

The container detection is reused from the JDK where it was fixed as part of https://bugs.openjdk.org/browse/JDK-8261242.

Also, fix and simplify `ByteFormattingUtil`: it shows KB/MB/GB but calculated KiB/MiB/GiB.